--- a/package.json
+++ b/package.json
@@ -11,20 +11,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.0",
-    "@angular/cdk": "^11.2.1",
-    "@angular/common": "~11.0.0",
-    "@angular/compiler": "~11.0.0",
-    "@angular/core": "~11.0.0",
-    "@angular/forms": "~11.0.0",
-    "@angular/material": "^11.2.1",
-    "@angular/platform-browser": "~11.0.0",
-    "@angular/platform-browser-dynamic": "~11.0.0",
-    "@angular/router": "~11.0.0",
-    "@angular/service-worker": "~11.0.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "@angular/animations": "11.0.8",
+    "@angular/cdk": "11.2.4",
+    "@angular/common": "11.0.8",
+    "@angular/compiler": "11.0.8",
+    "@angular/core": "11.0.8",
+    "@angular/forms": "11.0.8",
+    "@angular/material": "^11.2.4",
+    "@angular/platform-browser": "11.0.8",
+    "@angular/platform-browser-dynamic": "11.0.8",
+    "@angular/router": "11.0.8",
+    "@angular/service-worker": "^11.2.5",
+    "rxjs": "6.6.3",
+    "tslib": "2.1.0",
+    "zone.js": "0.11.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.1",
